--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
 </main>
 
 <script src="//cdn.bootcss.com/jquery/1.11.1/jquery.min.js"></script>
+<script src="//cdn.bootcss.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
 <script src="./assets/jquery.message.js"></script><div style="clear:both;"></div><div id="jquery-beauty-msg"></div>
 <script src="./assets/jquery.json.js"></script>
 <script src="./assets/jquery.xml2json.js"></script>
 <script src="./assets/jquery.json2xml.js"></script>
 <script src="./assets/json2.js"></script>
 <script src="./assets/jsonlint.js"></script>
-<script src="//cdn.bootcss.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
-<script src="base.js"></script>
+<script src="assets/base.js"></script>
 </body>
 </html>
